--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Using technology to reunite you with your lost pet.</p>
+          <p class="lead">Reuniting people and pets since 2013.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -204,8 +204,10 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
+            Every pet owner has experienced it - the heartache of a missing cat or dog.
+            The uncertainty of not knowing whether Spot got picked up by a loving stranger
+            or Kitty is lost in an alley.  Don't despair!  Chances are someone not very far away knows where your 
+            pet is and wants to help her get home.  Kittycomeback is the answer to a lost pet-owner's dream.
             mollis justo velit at nunc. Fusce nec egestas sem. Donec
             fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
             volutpat lorem ut congue malesuada. In facilisis scelerisque
