--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Kitty Come Back!</title>
+    <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -133,7 +133,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Kitty Come Back!</h1>
+          <h1>Product: Development Version</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
@@ -145,13 +145,14 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://i.imgur.com/gT04YLd.png" title="Reunited!"/>
+          <img class="img-polaroid" alt="Halp!" src="http://i.imgur.com/aspw6j4.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
+          <div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
@@ -172,6 +173,7 @@
               </div>
             </div>
           </div>
+          <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -180,17 +182,23 @@
               <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+          </div>
+        </div>
         </div>
       </div>
 
@@ -200,18 +208,17 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/aspw6j4.png" title="Halp me huminz! I'm lost and I want to go home."/>
+          <img class="img-polaroid"  alt="Reunited!" src="http://i.imgur.com/y8EyKIX.png">
         </div>
         <div class="span5 copy">
           <p>
-            Every pet owner has experienced it - the heartache of a missing cat or dog.
-            The uncertainty of not knowing whether Spot got picked up by a loving stranger
-            or Kitty is lost in an alley.  Don't despair!  Chances are someone not very far away knows where your 
-            pet is and wants to help her get home.  Kittycomeback is the answer to a lost pet-owner's dream.
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+            Every pet owner has experienced it - the heartache of a missing 
+            cat or dog. The uncertainty of not knowing whether your family's
+            best friend, Spot, got picked up by a loving stranger
+            or Kitty is lost in an alley.  Don't despair!  Chances are an 
+            animal lover not very far away knows where your
+            pet is and wants to help her get home.  Kittycomeback is the answer
+            to a lost pet-owner's dream.
             quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
             risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
             consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
@@ -238,7 +245,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/diUMEGc.jpg" title="UAV Drone taking off to search for a missing pup!"/>
+          <img class="img-polaroid"  alt="UAV Drone taking off to search for a missing pup!" src="http://i.imgur.com/diUMEGc.jpg">
         </div>
       </div>
 
