--- a/index.html
+++ b/index.html
@@ -211,8 +211,6 @@
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
           </div>
         </div>
@@ -225,7 +223,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid"  alt="Reunited!" src="http://imgur.com/gT04YLd?tags">
+          <img class="img-polaroid"  alt="Reunited!" src="http://i.imgur.com/gT04YLd.png">
         </div>
         <div class="span5 copy">
           <p>
@@ -235,12 +233,11 @@
             or Kitty is lost in an alley.  Don't despair!  Chances are an 
             animal lover not very far away knows where your
             pet is and wants to help her get home.  Kittycomeback is the answer
-            to a lost pet-owner's dream.
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            to a lost pet-owner's dream. With our real-time google map 
+            interface, you can find out your pet is safe within minutes!
+            Created by animal lovers, Kittycomeback's services are free!
+            We hope you never lose your best friend, but we are here if you need us.
+            Best of all, our service is free, allowing us to reach a universal audience.
           </p>
         </div>
       </div>
