--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" alt="Halp!" src="http://i.imgur.com/aspw6j4.png">
+          <img class="img-polaroid" alt="Halp!" src="http://i.imgur.com/gT04YLd.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
