--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           </div>
           <div class="row-fluid">
           <div class="span6 offset3 order">
-<a class="coinbase-button" data-code="0ab960f9208a5b2c4565d56fb748f41a" data-button-style="custom_large" href="https://coinbase.com/checkouts/0ab960f9208a5b2c4565d56fb748f41a">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+<a class="coinbase-button" data-code="0ab960f9208a5b2c4565d56fb748f41a" data-button-style="custom_large" href="https://coinbase.com/checkouts/0ab960f9208a5b2c4565d56fb748f41a">Donate</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 
           </div>
           </div>
@@ -223,7 +223,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid"  alt="Reunited!" src="http://i.imgur.com/gT04YLd.png">
+          <img class="img-polaroid"  alt="Reunited!" title="Reunited!" src="http://i.imgur.com/gT04YLd.png">
         </div>
         <div class="span5 copy">
           <p>
@@ -235,7 +235,8 @@
             pet is and wants to help her get home.  Kittycomeback is the answer
             to a lost pet-owner's dream. With our real-time google map 
             interface, you can find out your pet is safe within minutes!
-            Created by animal lovers, Kittycomeback's services are free!
+            Created by animal lovers, Kittycomeback's services are free to
+            all pet owners!
             We hope you never lose your best friend, but we are here if you need us.
             Best of all, our service is free, allowing us to reach a universal audience.
           </p>
