--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Reuniting people and pets since 2013.</p>
+          <p class="lead">Help us help lost pets get home!</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" alt="Halp!" src="http://i.imgur.com/gT04YLd.png">
+          <img class="img-polaroid" alt="Halp!" src="http://i.imgur.com/aspw6j4.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -227,18 +227,15 @@
         </div>
         <div class="span5 copy">
           <p>
-            Every pet owner has experienced it - the heartache of a missing 
-            cat or dog. The uncertainty of not knowing whether your family's
-            best friend, Spot, got picked up by a loving stranger
-            or Kitty is lost in an alley.  Don't despair!  Chances are an 
-            animal lover not very far away knows where your
-            pet is and wants to help her get home.  Kittycomeback is the answer
-            to a lost pet-owner's dream. With our real-time google map 
-            interface, you can find out your pet is safe within minutes!
-            Created by animal lovers, Kittycomeback's services are free to
-            all pet owners!
-            We hope you never lose your best friend, but we are here if you need us.
-            Best of all, our service is free, allowing us to reach a universal audience.
+	Every pet owner has experienced it - the heartache of a missing 
+	cat or dog. The uncertainty of not knowing whether your family's
+	best friend got picked up by a loving stranger
+	or is lost in an alley.  Don't despair!  Chances are an 
+	animal lover not very far from you knows where your
+	pet is and wants to help her get home.  With your help, Kittycomeback
+	will be the answer to every pet-owner's prayers. Best of all, 
+	our service is free, allowing us to reach a the widest possible
+ 	audience.
           </p>
         </div>
       </div>
@@ -246,17 +243,11 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	With our real-time Google map interface, you will know 
+	your pet is safe within minutes! Created by animal 
+	lovers like you, Kittycomeback's services are free to
+	all pet owners. We hope you never lose your best 
+	friend, but we are here if you need us. 
           </p>
         </div>
         <div class="span5 asset">
